--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
     <script type="text/template">
 ## 2016 Fall 電腦輔助設計實習課程 四設計二甲 第8組
 
-### Welcome to the third group
+
 
 <small>
-Created by [Hakim El Hattab](http://hakim.se)
-[@hakimel](http://twitter.com/hakimel)
+Created by林嘉文
 </small>
 
 [blog](blog/index.html)
@@ -57,10 +56,12 @@ Created by [Hakim El Hattab](http://hakim.se)
 <section>
 <section data-markdown>
     <script type="text/template">
-## 40423123 簡報
-##設計二甲 第8組
-
-
+<h3><a href="https://40423123.github.io/2016fallcadp_hw/#/">40423123</a></h3>
+<h3><a href="https://40423129.github.io/2016fallcadp_hw/#/">40423129</a></h3>
+<h3><a href="https://40423132.github.io/2016fallcadp_hw/#/">40423132</a></h3>
+<h3><a href="https://40423133.github.io/2016fallcadp_hw/#/">40423133</a></h3>
+<h3><a href="https://40423155.github.io/2016fallcabp_hw/#/">40423155</a></h3>
+<h3><a href="https://40423157.github.io/2016fallcadp_hw/#/">40423157</a></h3>
 
     </script>
 </section>
