--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Created by林嘉文
 <section data-markdown>
     <script type="text/template">
 <h3><a href="https://40423123.github.io/2016fallcadp_hw/#/">40423123</a></h3>
-<h3><a href="https://40423129.github.io/2016fallcadp_hw/#/">40423129</a></h3>
+<h3><a href="https://40423129.github.io/2016cadp_hw/#/">40423129</a></h3>
 <h3><a href="https://40423132.github.io/2016fallcadp_hw/#/">40423132</a></h3>
 <h3><a href="https://40423133.github.io/2016fallcadp_hw/#/">40423133</a></h3>
 <h3><a href="https://40423155.github.io/2016fallcabp_hw/#/">40423155</a></h3>
